UHF-12675: Fix small layout issue on submission info block title

--- a/public/themes/custom/hdbt_subtheme/src/scss/06-components/forms/_hdbt-react-form.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06-components/forms/_hdbt-react-form.scss
@@ -65,3 +65,7 @@
   margin: $spacing-half 0 0;
   padding: 0;
 }
+
+.hdbt-react-form__submission-info_top {
+  padding-block-end: $spacing;
+}
